--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,4 @@ android:
 notifications:
     slack: osmarsfavoriteteam:DonXX1YhIre5zNHPwPq083Mv
 before_install:
-  - yes | sdkmanager "platforms;android-27"
-  - yes | sdkmanager "platforms;android-26"
+  - yes | sdkmanager --licenses
