--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,5 @@ notifications:
     slack: osmarsfavoriteteam:DonXX1YhIre5zNHPwPq083Mv
 before_install:
   - sdkmanager --update && yes | sdkmanager --licenses
+  - yes | sdkmanager "platforms;android-27"
+  - yes | sdkmanager "platforms;android-26"
