--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,23 @@
 language: android
+sudo: false
 android:
   components:
     - build-tools-27.0.3
     - android-27
     - extra
     - sys-img-armeabi-v7a-android-26
-    - sys-img-armeabi-v7a-android-17 
+    - sys-img-armeabi-v7a-android-17
+  licenses:
+    - 'android-sdk-preview-license-52d11cd2'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
+  before_install:
+    - yes | sdkmanager "platforms;android-27"
+    - yes | sdkmanager "platforms;android-26"
+  before_script:
+    - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+    - emulator -avd test -no-skin -no-audio -no-window &
+    - android-wait-for-emulator
+    - adb shell input keyevent 82 & 
 notifications:
     slack: osmarsfavoriteteam:DonXX1YhIre5zNHPwPq083Mv
-before_install:
-  - yes | sdkmanager "platforms;android-27"
-  - yes | sdkmanager "platforms;android-26"
