--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,16 @@
 language: android
 sudo: false
+jdk:
+  - oraclejdk8
+before_install:
+  - chmod +x gradlew
+env:
+  global:
+   - ANDROID_API_LEVEL=27
+   - EMULATOR_API_LEVEL=21
+   - ANDROID_BUILD_TOOLS_VERSION=27.0.3
+   - ANDROID_ABI=google_apis/armeabi-v7a
+   - ADB_INSTALL_TIMEOUT=20
 android:
   components:
     - build-tools-27.0.3
@@ -11,9 +22,6 @@ android:
     - 'android-sdk-preview-license-52d11cd2'
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
-  before_install:
-    - yes | sdkmanager "platforms;android-27"
-    - yes | sdkmanager "platforms;android-26"
   before_script:
     - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
     - emulator -avd test -no-skin -no-audio -no-window &
