--- a/.travis.yml
+++ b/.travis.yml
@@ -2,41 +2,46 @@ language: android
 sudo: false
 jdk:
   - oraclejdk8
-before_install:
-  - chmod +x gradlew
+before_cache:
+  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
 env:
   global:
    - ANDROID_API_LEVEL=27
-   - EMULATOR_API_LEVEL=21
+   - EMULATOR_API_LEVEL=22
    - ANDROID_BUILD_TOOLS_VERSION=27.0.3
    - ANDROID_ABI=google_apis/armeabi-v7a
    - ADB_INSTALL_TIMEOUT=20
 android:
   components:
-    - build-tools-27.0.3
-    - android-27
-    - extra
-    - addon-google_apis-google-27
-    - addon-google_apis-google-21
-    - sys-img-armeabi-v7a-android-27
-    - sys-img-armeabi-v7a-android-21
+    - tools # Update android-sdk (also called android-sdk-tools)
+    - platform-tools
+    - tools # Write the second time to update to thes newest as described in the document
+    - build-tools-${BUILD_TOOLS_VERSION} # For building
+    - android-${COMPILE_SDK_VERSION} # For building
+    - android-${EMULATOR_API} # For testing
+    - extra-android-m2repository # Support library
+    - sys-img-${ABI}-android-${EMULATOR_API} # Emulator image
   licenses:
     - 'android-sdk-preview-license-52d11cd2'
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
+before_install:
+  - chmod +x gradlew
+install:
+  - sdkmanager --list || true # Debug / Observation
+  - echo yes | sdkmanager "extras;m2repository;com;android;support;constraint;constraint-layout;1.0.2" #&> /dev/null
+  - echo yes | sdkmanager "extras;m2repository;com;android;support;constraint;constraint-layout-solver;1.0.2" #&> /dev/null
+  - avdmanager --list || true  # Debug / Observation
 before_script:
-  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window &
+  - echo no | android create avd --force -n test -t android-${EMULATOR_API} --abi ${ABI}
+  - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
-  - adb shell input keyevent 82 & 
-notifications:
-    slack: osmarsfavoriteteam:DonXX1YhIre5zNHPwPq083Mv
-script:
-  - "./gradlew clean build connectedCheck -PdisablePreDex --stacktrace"
-before_deploy:
-  - cp $TRAVIS_BUILD_DIR/example_keystore.jks $HOME
-  - cd app/build/outputs/apk/
-  - jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore $HOME/example_keystore.jks -storepass $storepass -keypass $keypass app-release-unsigned.apk ExampleKeystoreAlias
-  # Verification
-  - jarsigner -verify app-release-unsigned.apk
-  - "${ANDROID_HOME}/build-tools/24.0.2/zipalign -v 4 app-release-unsigned.apk TravisExample.apk"
+  - adb shell input keyevent 82 &
+#notifications:
+#   slack: osmarsfavoriteteam:DonXX1YhIre5zNHPwPq083Mv
+
