--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,11 @@ cache:
     - $HOME/.gradle/wrapper/
 env:
   global:
-   - ANDROID_API_LEVEL=27
-   - EMULATOR_API_LEVEL=21
-   - ANDROID_BUILD_TOOLS_VERSION=27.0.3
-   - ANDROID_ABI=google_apis/armeabi-v7a
-   - ADB_INSTALL_TIMEOUT=20
+    - COMPILE_SDK_VERSION=27 # Same as `compileSdkVersion` in build.gradle
+    - EMULATOR_API=22
+    - BUILD_TOOLS_VERSION=27.0.3 # Same as `buildToolsVersion` in build.gradle
+    - ABI=armeabi-v7a # ARM ABI v7a by default
+    - ADB_INSTALL_TIMEOUT=5 # minutes
 android:
   components:
     - tools # Update android-sdk (also called android-sdk-tools)
