--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,6 @@ before_script:
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
-#notifications:
-#   slack: osmarsfavoriteteam:DonXX1YhIre5zNHPwPq083Mv
+notifications:
+   slack: osmarsfavoriteteam:DonXX1YhIre5zNHPwPq083Mv
 
